--- a/src/main/webapp/app/shared/modal/modalCart/moda-cart.html
+++ b/src/main/webapp/app/shared/modal/modalCart/moda-cart.html
@@ -9,8 +9,8 @@
         <!-- Thumbnail Large Image start -->
         <div class="tab-content">
           <div id="thumb1" class="tab-pane fade show active">
-            <a data-fancybox="images" href="./content/img/products/35.jpg"
-              ><img src="./content/img/products/35.jpg" alt="product-view"
+            <a data-fancybox="images" href="../../../../content/img/products/35.jpg"
+              ><img src="../../../../content/img/products/35.jpg" alt="product-view"
             /></a>
           </div>
         </div>
