--- a/src/main/webapp/app/shared/modal/modalVoucher/modal-voucher.html
+++ b/src/main/webapp/app/shared/modal/modalVoucher/modal-voucher.html
@@ -1,6 +1,10 @@
 <div class="bossWrapp">
-  <div class="cardTitle">MÃ GIẢM GIÁ</div>
-
+  <div class="cardTitle">
+    MÃ GIẢM GIÁ
+    <button type="button" class="close" style="padding-left: 740px" data-dismiss="modal" aria-hidden="true" (click)="closePopup()">
+      &times;
+    </button>
+  </div>
   <div class="single">
     <div class="icon"></div>
     <div class="text">
