--- a/src/main/webapp/app/shared/modal/modalCart/moda-cart.html
+++ b/src/main/webapp/app/shared/modal/modalCart/moda-cart.html
@@ -43,7 +43,7 @@
               </ng-template>
             </p>
           </div>
-          <p class="mb-20 pro-desc-details">{{ productInCart.productDetails!.description }}</p>
+          <p class="mb-20 pro-desc-details">{{ productDetail.description }}</p>
           <div class="product-size mb-20 clearfix d-flex">
             <div>
               <label>Màu</label>
